fix align nft name

--- a/src/components/nfts/NFTCardList.scss
+++ b/src/components/nfts/NFTCardList.scss
@@ -67,6 +67,7 @@
       display: flex;
       flex-direction: column;
       min-width: 0;
+      align-items: flex-start;
     }
 
     .collection-image-container {
